@@ -2,6 +2,8 @@ Revision history for Net-Gitlab
 
 {{$NEXT}}
 
+ - Add deprecation notice, telling users to check out GitLab::API::v4 instead.
+
 0.05      2014-10-07 04:45:58+00:00 UTC
 
 0.04      2014-09-03 04:28:17+00:00 UTC
